cancel links to be back buttons and correct vertical align of back arrow in header of AddNewIvnentoryItem and EditInventory

--- a/src/pages/AddNewInventoryItem/AddNewInventoryItem.scss
+++ b/src/pages/AddNewInventoryItem/AddNewInventoryItem.scss
@@ -20,6 +20,11 @@
     border-bottom: 1px solid $secondary-color-light;
     display: flex;
 
+    &__link {
+      display: flex;
+      align-items: center;
+    }
+
     &__title {
         padding: 0 0 0 .75rem;
         margin: 0;
